Add pot-add-new-modal
