# server/controllers/pots_controller.py
@@ -1,6 +1,6 @@
 from flask_restx import Namespace, Resource
 
-from services.pots_service import get_overview_pots
+from services.pots_service import get_pots
 from models.pots_model import Pots as PotsModel
 
 POTS = "pots-api"
@@ -10,7 +10,7 @@ pots_ns = Namespace(f"{POTS}", description="Get Pots content")
 class PotsApi(Resource):
     @pots_ns.marshal_with(PotsModel.get_api_model(pots_ns))
     def get(self):
-        pots = get_overview_pots()
+        pots = get_pots()
         return PotsModel(pots=pots).dict()
 
 
